clusters/k8s-keiretsu/apps/strimzi/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: robbinsdale-broker-10
  namespace: strimzi
spec:
  hostnames:
  - broker-10.kafka.k8s.rajsingh.info
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: robbinsdale
    namespace: envoy-gateway-system
    sectionName: kafka-listener
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: robbinsdale-broker-raj-10
      port: 9092
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: robbinsdale-broker-11
  namespace: strimzi
spec:
  hostnames:
  - broker-11.kafka.k8s.rajsingh.info
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: robbinsdale
    namespace: envoy-gateway-system
    sectionName: kafka-listener
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: robbinsdale-broker-raj-11
      port: 9092
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: robbinsdale-broker-12
  namespace: strimzi
spec:
  hostnames:
  - broker-12.kafka.k8s.rajsingh.info
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: robbinsdale
    namespace: envoy-gateway-system
    sectionName: kafka-listener
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: robbinsdale-broker-raj-12
      port: 9092
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: robbinsdale-bootstrap
  namespace: strimzi
spec:
  hostnames:
  - bootstrap.kafka.k8s.rajsingh.info
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: robbinsdale
    namespace: envoy-gateway-system
    sectionName: kafka-listener
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: robbinsdale-kafka-raj-bootstrap
      port: 9092
